@@ -3,7 +3,6 @@ package nl.pim16aap2.bigDoors.moveBlocks;
 import java.util.Optional;
 import java.util.logging.Level;
 
-import org.bukkit.ChatColor;
 import org.bukkit.Location;
 import org.bukkit.World;
 
@@ -304,15 +303,6 @@ public class BridgeOpener implements Opener
         return door.getEngSide();
     }
 
-    private Result chunksLoaded(Door door)
-    {
-        if (!hasValidCoordinates(door))
-            return Result.FAIL;
-
-        Mode mode = plugin.getConfigLoader().loadChunksForToggle() ? Mode.ATTEMPT_LOAD : Mode.VERIFY_LOADED;
-        return ChunkUtils.checkChunks(door.getWorld(), getCurrentChunkRange(door), mode);
-    }
-
     @Override
     public DoorOpenResult shadowToggle(Door door)
     {
@@ -339,7 +329,7 @@ public class BridgeOpener implements Opener
     }
 
     @Override
-    public DoorOpenResult openDoor(Door door, double time, boolean instantOpen, boolean silent)
+    public DoorOpenResult openDoor(Door door, double time, boolean instantOpen, boolean silent, Mode mode)
     {
         if (plugin.getCommander().isDoorBusyRegisterIfNot(door.getDoorUID()))
         {
@@ -348,12 +338,11 @@ public class BridgeOpener implements Opener
             return abort(DoorOpenResult.BUSY, door.getDoorUID());
         }
 
-        final Result chunkLoadResult = chunksLoaded(door);
+        final Result chunkLoadResult = chunksLoaded(door, mode);
         if (chunkLoadResult == Result.FAIL)
         {
-            plugin.getMyLogger().logMessage(ChatColor.RED + "Chunks for bridge " + door.getName() + " are not loaded!",
-                                            true, false);
-            return abort(DoorOpenResult.ERROR, door.getDoorUID());
+            plugin.getMyLogger().logMessage("Chunks for bridge " + door.getName() + " are not loaded!", true, false);
+            return abort(DoorOpenResult.CHUNKSNOTLOADED, door.getDoorUID());
         }
         if (chunkLoadResult == Result.REQUIRED_LOAD)
             instantOpen = true;
