@@ -5,10 +5,8 @@ import java.util.logging.Level;
 import org.bukkit.Location;
 import org.bukkit.World;
 
-import net.md_5.bungee.api.ChatColor;
 import nl.pim16aap2.bigDoors.BigDoors;
 import nl.pim16aap2.bigDoors.Door;
-import nl.pim16aap2.bigDoors.util.ChunkUtils;
 import nl.pim16aap2.bigDoors.util.ChunkUtils.Mode;
 import nl.pim16aap2.bigDoors.util.ChunkUtils.Result;
 import nl.pim16aap2.bigDoors.util.DoorDirection;
@@ -52,15 +50,6 @@ public class ElevatorOpener implements Opener
         return RotateDirection.UP;
     }
 
-    private Result chunksLoaded(Door door)
-    {
-        if (!hasValidCoordinates(door))
-            return Result.FAIL;
-
-        Mode mode = plugin.getConfigLoader().loadChunksForToggle() ? Mode.ATTEMPT_LOAD : Mode.VERIFY_LOADED;
-        return ChunkUtils.checkChunks(door.getWorld(), getCurrentChunkRange(door), mode);
-    }
-
     @Override
     public DoorOpenResult shadowToggle(Door door)
     {
@@ -94,7 +83,7 @@ public class ElevatorOpener implements Opener
 
     // Open a door.
     @Override
-    public DoorOpenResult openDoor(Door door, double time, boolean instantOpen, boolean silent)
+    public DoorOpenResult openDoor(Door door, double time, boolean instantOpen, boolean silent, Mode mode)
     {
         if (plugin.getCommander().isDoorBusyRegisterIfNot(door.getDoorUID()))
         {
@@ -103,12 +92,11 @@ public class ElevatorOpener implements Opener
             return abort(DoorOpenResult.BUSY, door.getDoorUID());
         }
 
-        final Result chunkLoadResult = chunksLoaded(door);
+        final Result chunkLoadResult = chunksLoaded(door, mode);
         if (chunkLoadResult == Result.FAIL)
         {
-            plugin.getMyLogger().logMessage(ChatColor.RED + "Chunks for door " + door.getName() + " are not loaded!",
-                                            true, false);
-            return abort(DoorOpenResult.ERROR, door.getDoorUID());
+            plugin.getMyLogger().logMessage("Chunks for door " + door.getName() + " are not loaded!", true, false);
+            return abort(DoorOpenResult.CHUNKSNOTLOADED, door.getDoorUID());
         }
         if (chunkLoadResult == Result.REQUIRED_LOAD)
             instantOpen = true;
