@@ -2,7 +2,6 @@ package nl.pim16aap2.bigDoors.moveBlocks;
 
 import java.util.logging.Level;
 
-import org.bukkit.ChatColor;
 import org.bukkit.Location;
 import org.bukkit.World;
 
@@ -104,15 +103,6 @@ public class SlidingDoorOpener implements Opener
         return openDir;
     }
 
-    private Result chunksLoaded(Door door)
-    {
-        if (!hasValidCoordinates(door))
-            return Result.FAIL;
-
-        Mode mode = plugin.getConfigLoader().loadChunksForToggle() ? Mode.ATTEMPT_LOAD : Mode.VERIFY_LOADED;
-        return ChunkUtils.checkChunks(door.getWorld(), getCurrentChunkRange(door), mode);
-    }
-
     private int getLengthInDir(Door door, boolean NS)
     {
         // If NS, check the number of blocks along the north/south axis, i.e. the Z
@@ -194,7 +184,7 @@ public class SlidingDoorOpener implements Opener
 
     // Open a door.
     @Override
-    public DoorOpenResult openDoor(Door door, double time, boolean instantOpen, boolean silent)
+    public DoorOpenResult openDoor(Door door, double time, boolean instantOpen, boolean silent, Mode mode)
     {
         if (plugin.getCommander().isDoorBusyRegisterIfNot(door.getDoorUID()))
         {
@@ -203,12 +193,11 @@ public class SlidingDoorOpener implements Opener
             return abort(DoorOpenResult.BUSY, door.getDoorUID());
         }
 
-        final Result chunkLoadResult = chunksLoaded(door);
+        final Result chunkLoadResult = chunksLoaded(door, mode);
         if (chunkLoadResult == Result.FAIL)
         {
-            plugin.getMyLogger().logMessage(ChatColor.RED + "Chunks for door " + door.getName() + " are not loaded!",
-                                            true, false);
-            return abort(DoorOpenResult.ERROR, door.getDoorUID());
+            plugin.getMyLogger().logMessage("Chunks for door " + door.getName() + " are not loaded!", true, false);
+            return abort(DoorOpenResult.CHUNKSNOTLOADED, door.getDoorUID());
         }
         if (chunkLoadResult == Result.REQUIRED_LOAD)
             instantOpen = true;
